Corrections on spectrum; Adding special filter to help; Changing spectrum image on help; Removing the wrongly added menu in main.ui;

--- a/src/help/help.qrc
+++ b/src/help/help.qrc
@@ -9,6 +9,7 @@
         <file>usage.png</file>
         <file>impl.png</file>
         <file>simple_filter.png</file>
+        <file>special.png</file>
         <file>bw_baixa.png</file>
         <file>bw_alta.png</file>
         <file>spectrum.png</file>
