--- a/src/main.ui
+++ b/src/main.ui
@@ -1,20 +1,3 @@
-<!--
- * This file is part of Blind Camaleon.
- *
- * Blind Camaleon is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Blind Camaleon is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Blind Camaleon.  If not, see <http://www.gnu.org/licenses/lgpl-3.0.txt>.
--->
-
 <ui version="4.0" >
  <class>PIDMainWindow</class>
  <widget class="QMainWindow" name="PIDMainWindow" >
@@ -76,7 +59,7 @@
    </widget>
    <widget class="QMenu" name="menuFilters" >
     <property name="title" >
-     <string>Filters</string>
+     <string>Fil&amp;ters</string>
     </property>
     <widget class="QMenu" name="menuButterworth" >
      <property name="title" >
@@ -85,10 +68,16 @@
      <addaction name="menuButterworthAlta" />
      <addaction name="menuButterworthBaixa" />
     </widget>
-    <addaction name="menuFiltersAltaIdeal" />
-    <addaction name="menuFiltersBaixaIdeal" />
-    <addaction name="menuFiltersIdeal" />
+    <widget class="QMenu" name="menuIdeal" >
+     <property name="title" >
+      <string>Ideal</string>
+     </property>
+     <addaction name="menuFiltersAltaIdeal" />
+     <addaction name="menuFiltersBaixaIdeal" />
+    </widget>
     <addaction name="menuButterworth" />
+    <addaction name="menuIdeal" />
+    <addaction name="menuFiltersIdeal" />
    </widget>
    <addaction name="menuFile" />
    <addaction name="menuTools" />
@@ -170,7 +159,7 @@
   </action>
   <action name="menuFiltersIdeal" >
    <property name="text" >
-    <string>Ideal</string>
+    <string>Especial</string>
    </property>
    <property name="shortcut" >
     <string>Ctrl+I</string>
